[tool.poetry]
name = "sed"
version = "0.1.0"
description = "Single Event Data Frame Processor: Backend to handle photoelectron resolved datastreams"
authors = ["Muhammad Zain Sohail <zainsohail04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.22"
pandas = "^1.4.1"
h5py = "^3.6.0"
dask = "^2021.12.0"
fastparquet = "^0.8.0"
pyarrow = "^7.0.0"
psutil = "^5.9.0"
xarray = "^0.20.1"
numba = "^0.55.1"
threadpoolctl = "^3.1.0"
tqdm = "^4.62.3"
matplotlib = "^3.5.1"
jupyter = {version = "^1.0.0", extras = ["notebook"]}
ipykernel = {version = "^6.9.1", extras = ["notebook"]}

[tool.poetry.extras]
notebook = ["jupyter", "ipykernel"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
