[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]

[project]
name = "sed-processor"
dynamic = ["version"]
description = "Single Event Data Frame Processor: Backend to handle photoelectron resolved datastreams"
authors = [
    {name = "OpenCOMPES team", email = "sed-processor@mpes.science"},
]
readme = "README.md"
keywords = ["sed", "mpes", "flash", "arpes"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bokeh>=2.4.2,<3.7.0",
    "dask>=2021.12.0,<2024.8",
    "elabapi-python>=5.0,<5.2",
    "fastdtw>=0.3.4",
    "h5py>=3.6.0",
    "ipympl>=0.9.1",
    "ipywidgets>=8.1.5",
    "lmfit>=1.0.3",
    "matplotlib>=3.5.1",
    "natsort>=8.1.0",
    "numba>=0.55.1",
    "numpy>=1.18",
    "pandas>=1.4.1",
    "photutils<2.0",
    "psutil>=5.9.0",
    "pynxtools-mpes>=0.2.5",
    "pynxtools>=0.11.1",
    "pyyaml>=6.0.0",
    "scipy>=1.8.0",
    "symmetrize>=0.5.5",
    "threadpoolctl>=3.1.0",
    "tifffile>=2022.2.9",
    "tqdm>=4.62.3",
    "xarray>=0.20.2",
    "joblib>=1.2.0",
    "pyarrow>=14.0.1",
    "pydantic>=2.8.2",
]

[project.urls]
repository = "https://github.com/OpenCOMPES/sed"
documentation = "https://opencompes.github.io/sed/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-clarity>=1.0.1",
    "ruff<0.3.0,>=0.1.7",
    "mypy<1.10.0,>=1.6.0",
    "types-pyyaml>=6.0.12.12",
    "types-requests>=2.31.0.9",
    "pyfakefs>=5.3.0",
    "requests-mock>=1.11.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.1.2",
    "tomlkit>=0.12.0",
    "sphinx-autodoc-typehints>=1.17.0",
    "nbsphinx>=0.9.3",
    "myst-parser>=2.0.0",
    "pydata-sphinx-theme>=0.15.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.9.1",
    "jupyterlab>=4.0",
    "jupyterlab-h5web>=8.0.0",
]
all = [
    "sed-processor[dev,docs,notebook]",
]

[tool.coverage.report]
omit = [
    "./config.py",
    "./config-3.py",
]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
lint.select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "F841", # unused variable
    "F401", # unused imports
    "ARG", # unused arguments
]
lint.ignore = [
    "E701", # Multiple statements on one line (colon)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLR5501", # else-if-used
    "PLW2901", # redefined-loop-name
]
lint.fixable = ["ALL"]
line-length = 100 # change the default line length number or characters.

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
